--- a/fe/src/components/MasterViewPlanning/MasterViewPlanning.css
+++ b/fe/src/components/MasterViewPlanning/MasterViewPlanning.css
@@ -1,3 +1,7 @@
+.shared-url {
+  text-align: right;
+  margin: 10px 0;
+}
 .view-planning {
   display: flex;
 }
@@ -18,6 +22,6 @@
   margin: 0 25px;
 }
 
-.completed-text{
+.completed-text {
   text-align: center;
 }
